src/style.sass
$hit-skill-color: rgb(225, 33, 100)
$buff-skill-color: rgb(19, 157, 162)
$debuff-skill-color: rgb(243, 147, 29)

@keyframes small-pop
    0%
        transform: scale(1)
    60%
        transform: scale(1.02)
    100%
        transform: scale(1)

@keyframes pop
    0%
        transform: scale(1)
    60%
        transform: scale(1.5)
    100%
        transform: scale(1)

*
    padding: 0
    margin: 0
    box-sizing: border-box

body
    background: #cc95c0
    background: linear-gradient(-12deg, #cc95c0, #dbd4b4, #7aa1d2)

button
    color: #262626

#app
    height: 100vh
    max-width: 600px
    margin: 0 auto
    color: white
    font-family: "Helvetica", sans-serif
    padding: 6%
    display: flex
    gap: 4rem
    flex-direction: column
    justify-content: flex-end

.debug-bar
    position: fixed
    top: 0
    left: 0
    right: 0
    padding: 0.5rem
    display: flex
    gap: 1rem
    background: rgba(0, 0, 0, 0.3)
    button
        padding: 0.3rem
        opacity: 0.7

.modal
    font-family: "Helvetica", sans-serif
    position: fixed
    left: 0
    top: 0
    width: 100%
    height: 100%
    z-index: 1
    display: flex
    align-items: center
    justify-content: center
    opacity: 0
    transition: opacity 0.3s
    pointer-events: none

    &.visible
        opacity: 1
        pointer-events: auto

    .modal-background
        background: rgba(0, 0, 0, 0.6)
        position: fixed
        left: 0
        top: 0
        width: 100%
        height: 100%

    .modal-header
        display: flex
        align-items: center
        border-bottom: 1px solid rgba(0, 0, 0, 0.1)
        background: rgb(43, 43, 43)
        gap: 1rem
        padding: 0.5rem 1rem
        color: white
        h5
            flex: auto
            padding: 1rem
            font-weight: normal
            font-size: 16px
        button
            padding: 0.7rem
            background: rgb(94, 94, 94)
            border-radius: 9999rem
            font-size: 12px
            line-height: 8px
            border: none
            cursor: pointer

    .modal-body
        background: white
        overflow: hidden
        border-radius: 1rem
        z-index: 2

    .modal-content
        margin: 1rem
        min-height: 10rem
        max-height: 20rem
        overflow-y: scroll

.combat-log
    list-style: none
    li
        padding: 0.1rem
        font-size: 12px
        font-weight: lighter

.radial-progress-icon
    fill: #262626

.skill-effects
    background: rgba(255, 253, 242, 0.8)
    box-shadow: 0.1rem 0.1rem 0.3rem rgba(0, 0, 0, 0.2)
    padding: 1rem
    color: #262626
    border-radius: 1rem
    height: 15rem
    overflow-y: scroll

.skill-buttons
    display: flex
    flex-direction: column
    gap: 0.7rem

.small-skill-buttons
    display: flex
    flex-direction: column
    gap: 0.3rem

.skill-button
    background: rgba(255, 253, 242, 0.8)
    padding: 0.3rem
    border-radius: 9999rem
    border: none
    display: flex
    color: #262626
    gap: 0.5rem
    user-select: none
    box-shadow: 0.1rem 0.1rem 0.3rem rgba(0, 0, 0, 0.2)
    transition: opacity 0.3s, transform 0.3s, box-shadow 0.3s

    .radial-progress
        flex: 2.5rem 0 0
        border-radius: 9999rem

    &.skill-ready
        cursor: pointer
        animation: small-pop 0.3s

    &.skill-active
        transform: scale(1.02)

    &.skill-cooling
        opacity: 0.8
        box-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.1)

    &.skill-active.skill-hit .radial-progress
        box-shadow: 0rem 0rem 0.5rem transparentize($hit-skill-color, 0.25)
    &.skill-active.skill-buff .radial-progress
        box-shadow: 0rem 0rem 0.5rem transparentize($buff-skill-color, 0.25)
    &.skill-active.skill-debuff .radial-progress
        box-shadow: 0rem 0rem 0.5rem transparentize($debuff-skill-color, 0.25)

    &.skill-hit
        .radial-progress
            circle
                stroke: $hit-skill-color

    &.skill-buff
        .radial-progress
            circle
                stroke: $buff-skill-color

    &.skill-debuff
        .radial-progress
            circle
                stroke: $debuff-skill-color

.skill-meta
    display: flex
    flex-direction: column
    align-items: flex-start
    justify-content: center

    h5
        font-weight: normal
        font-size: 13px

    p
        font-weight: lighter
        font-size: 12px

.small-skill
    width: 0.5rem
    height: 0.5rem
    display: block
    background: red
    border-radius: 9999rem
    transition: opacity 0.3s, transform 0.3s

    // &.skill-ready
    //     animation: pop 0.3s

    &.skill-hit
        background: $hit-skill-color

    &.skill-buff
        background: $buff-skill-color

    &.skill-debuff
        background: $debuff-skill-color

    &.skill-active.skill-hit
        box-shadow: 0 0 0.3rem $hit-skill-color
        transform: scale(1.5)

    &.skill-active.skill-buff
        box-shadow: 0 0 0.3rem $buff-skill-color
        transform: scale(1.5)

    &.skill-active.skill-debuff
        box-shadow: 0 0 0.3rem $debuff-skill-color
        transform: scale(1.5)

    &.skill-cooling
        opacity: 0.2

